--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,18 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=${username}
 spring.datasource.password=${password}
 spring.datasource.url=${url}
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+# Enable DELETE and PUT request
+spring.mvc.hiddenmethod.filter.enabled=true
+
+# max file size - default 1MB
+spring.servlet.multipart.max-file-size=10MB
+# max request size - default 10MB
+spring.servlet.multipart.max-request-size=25MB
+
+#flyway.user=${username}
+#flyway.password=${password}
+#flyway.url=${url}
+#flyway.schemas=app-db
+#flyway.locations=filesystem:db/migration
+spring.flyway.enabled=false
