Added product table, flyway, logger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,18 +2,27 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=${username}
 spring.datasource.password=${password}
 spring.datasource.url=${url}
+
+# Show SQL
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
 spring.jpa.hibernate.ddl-auto=update
+
 # Enable DELETE and PUT request
 spring.mvc.hiddenmethod.filter.enabled=true
 
-# max file size - default 1MB
+# Max file size - default 1MB
 spring.servlet.multipart.max-file-size=10MB
-# max request size - default 10MB
+# Max request size - default 10MB
 spring.servlet.multipart.max-request-size=25MB
 
-#flyway.user=${username}
-#flyway.password=${password}
-#flyway.url=${url}
-#flyway.schemas=app-db
-#flyway.locations=filesystem:db/migration
-spring.flyway.enabled=false
+# Flyway
+#spring.flyway.user=${username}
+#spring.flyway.password=${password}
+#spring.flyway.url=${url}
+#spring.flyway.baseline-on-migrate=true
+#spring.flyway.schemas=public
+#spring.flyway.locations=classpath:db/migration
+#spring.flyway.clean-disabled=true
+#spring.flyway.enabled=false
