--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.password=${password}
 spring.datasource.url=${url}
 
 # Show SQL
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
 spring.jpa.hibernate.ddl-auto=update
 
@@ -18,11 +18,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=25MB
 
 # Flyway
-#spring.flyway.user=${username}
-#spring.flyway.password=${password}
-#spring.flyway.url=${url}
-#spring.flyway.baseline-on-migrate=true
-#spring.flyway.schemas=public
-#spring.flyway.locations=classpath:db/migration
-#spring.flyway.clean-disabled=true
-#spring.flyway.enabled=false
+spring.flyway.enabled=true
+
+# Error page
+server.error.path=/api/home/error
