--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=${username}
-spring.datasource.password=${password}
-spring.datasource.url=${url}
+spring.datasource.username=${USERNAME}
+spring.datasource.password=${PASSWORD}
+spring.datasource.url=${URL}
 
 # Show SQL
 spring.jpa.show-sql=false
