--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# Postgresql
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=${USERNAME}
 spring.datasource.password=${PASSWORD}
